fix: button text not visible

--- a/css/halivert.css
+++ b/css/halivert.css
@@ -462,6 +462,7 @@ input[type=submit] {
 button,
 progress {
   overflow: hidden;
+  color: var(--text);
 }
 
 button {
