--- a/sass/form.scss
+++ b/sass/form.scss
@@ -74,6 +74,7 @@ input[type="submit"] {
 button,
 progress {
 	overflow: hidden;
+	color: var(--text);
 }
 
 button {
